# Libffi

./: .giattributes  .gitignore  CMakeLists.txt  copying  readme.md
include/: ffi_common.h  fficonfig.h.in
source/: ffi.c
source/asm/: win32.S
